deploy-folder/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec: 
  parentRefs:
    - name: eg 
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs: 
         - group: ""
           kind: Service
           name: backend
           port: 3000
           weight: 1
      matches:
         - path:
              type: PathPrefix
              value: /
